--- a/static/lk.html
+++ b/static/lk.html
@@ -132,6 +132,25 @@
                     <div class="tab-payment-grid-orders">
                         <div class="tab-payment">
                             <div class="tab-payment-order-number">Заказ №4556434</div>
+                            <div class="tab-payment-wrapper">
+                                  <div class="tab-payment-order-info">
+                                     <h5>Курсовая работа</h5>
+                                      <p class="text-block mb20">Бухгалтерский учет и аудит</p>
+                                      <p class="text-block border-bottom mb30">до 25.12.2020</p>
+                                      <span>3 8400 руб</span>
+
+                                </div><!--// tab-payment-order-info-->
+                                <div class="tab-payment-fullpay">
+                                    <h5>Оплатить полностью</h5>
+                                    <span class="tab-payment-radio radio-checked" data-order_id="1" id="order_1_fullpay">3 840 руб</span>
+                                </div><!--// tab-payment-order-fullpay-->
+                                <div class="tab-payment-prepay">
+                                    <h5>Внести предоплату</h5>
+                                    <span class="tab-payment-radio" data-order_id="1" id="order_1_prepay">9 999 руб</span>
+                                </div><!--// tab-payment-order-prepay-->
+
+                            </div><!--// tab-payment-wrapper-->
+
                         </div><!--// tab-payment-->
                     </div><!--// tab-payment-grid-orders-->
 
