--- a/static/lk.html
+++ b/static/lk.html
@@ -117,6 +117,27 @@
                         <a href="#" class="btn">внести предоплату</a>
                     </div>
 
+                <div class="order-messages mb20">
+                    <p class="order-messages-title">Чат с администрацией</p>
+                    <div class="order-messages-wrapper">
+                        <div class="order-message">
+                            <p class="order-user-message">
+                                <span>07.56.3443 Вы написали:</span>
+                                order-user-message
+                            </p>
+                            <p class="order-admin-message">
+                                 <span>07.56.3443 Администратор ответил:</span>
+                                order-admin-message
+                            </p>
+                        </div>
+
+                         <div class="new-order-message">
+                           <textarea class="form-control" placeholder="Ваше сообщение"></textarea>
+                        <a class="btn">Отправить</a>
+                        </div>
+                    </div>
+                </div><!--// order-messages-->
+
 
                 </div><!--// tab-order-->
 
